--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Karla&display=swap");
+
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0;
+    padding: 0;
+    background: #0b2434;
+    height: 100vh;
+    width: 100%;
+}
+
+.main {
+    text-align: center;
+    width: 320px;
+    height: 320px;
+    background: #f5f5f5;
+    border-radius: 10px;
+    width: 80vh;
+    height: 80vh;
+
+    height: "100vh";
+    color: #0b2434;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main h1 {
+    font-family: Karla, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25.6px;
+    line-height: 30px;
+    letter-spacing: -0.03em;
+}
+
+.main p {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13.1072px;
+    line-height: 16px;
+    letter-spacing: -0.03em;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.main .roll-btn {
+    font-family: Karla;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16.384px;
+    line-height: 19px;
+    color: #fff;
+    background-color: #5035ff;
+    text-align: center;
+    width: 92px;
+    height: 36px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.element {
+    width: 36px;
+    height: 36px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #59e391;
+}
+
+.grid {
+    display: grid;
+    margin: 20px;
+    grid-gap: 4px;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+#root {
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
