adding responsiveness to the components

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #ffffff;
+
+    border: 1px solid #bfbfbf;
+    box-shadow: 0px 0px 7px #aaaaaa;
+}
+
+.green {
     background-color: #59e391;
 }
 
